--- a/index.html
+++ b/index.html
@@ -404,6 +404,18 @@
 <iframe src="https://drive.google.com/file/d/1tsYJoljXFP7D2tmTth9S6rXM-t5bHuCw/preview" width="640" height="480" allow="autoplay"></iframe>
     
   </div>
+
+   <li onclick="showContent('final')"><b>Final Project </b> </li>
+  <div id="final" class="content-section">
+    <h3 id="pdisplay"><b>Presentation</b></h3>
+     <a href= "https://docs.google.com/presentation/d/1UuSeONSydovjAVOipB-zuYi9sld3RzsA/edit?usp=sharing&ouid=111307605433570872906&rtpof=true&sd=true" target="_blank">Presentation</a>
+    <p><b>Demo Video</b></p>
+     <iframe src="https://drive.google.com/file/d/18T2eF19MdS4y8sb3OkVP-TSMDMnuqVBS/preview" width="640" height="480" allow="autoplay"></iframe>
+      <h3 id="pdisplay"><b>Code File</b></h3>
+     <a href= "https://github.com/CodeExpeditor/Plant_Leaf_disease_detection_Using_Seeed_XIAO_ESP32S3" target="_blank">Code file</a>
+   <h3 id="pdisplay"><b> Hardware Documentation</b></h3>
+       
+  </div>
   
   <script src="script.js"></script>
 </body>
