--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
       <h3 id="pdisplay"><b>Code File</b></h3>
      <a href= "https://github.com/CodeExpeditor/Plant_Leaf_disease_detection_Using_Seeed_XIAO_ESP32S3" target="_blank">Code file</a>
    <h3 id="pdisplay"><b> Hardware Documentation</b></h3>
-       
+      <a href= "CSCE 5612 Embedded Hardware_Software Design _ Project Milestone Five.pdf" target="_blank">Hardware Documentation</a>
+
   </div>
   
   <script src="script.js"></script>
